updated dropdown menus with new materials

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,6 @@
 block variables
 doctype html
-- var materials = ["", "Wood", "Metal", "Ceramic", "Fabric", "Glass", "Paper", "Plastic", "Rubber", "Vinyl", "Leather"]
+- var materials = ["", "Wood", "Metal", "Ceramic", "Fabric", "Glass", "Paper", "Plastic", "Rubber", "Vinyl", "Leather", "Foam", "Silicone"]
 
 html
   head
