--- a/public/style.css
+++ b/public/style.css
@@ -19,12 +19,11 @@ body,
 }
 
 head {
-  font-size:10vw;
   margin: auto;
 }
 
 body {
-  margin: 0;
+  margin: auto;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
