--- a/public/style.css
+++ b/public/style.css
@@ -42,7 +42,7 @@ h2,
 h3 {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 5vh;
 
   padding: 0;
   margin: auto;
@@ -51,7 +51,7 @@ h3 {
 }
 
 h1 {
-  font-size: 1.2rem;
+  font-size: 7vh;
 }
 
 h3 {
