--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@ h2,
 h3 {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
-  font-size: 5vh;
+  font-size: 5vw;
 
   padding: 20px;
   margin: auto;
@@ -58,7 +58,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7vh;
+  font-size: 7vw;
 }
 
 h3 {
