--- a/public/style.css
+++ b/public/style.css
@@ -9,11 +9,11 @@
 
 @media screen and (min-width:1000px) {
     h1 {
-        font-size: 30px;
+        font-size: 30px !important;
     }
     
     h3 {
-        font-size: 25px;
+        font-size: 25px !important;
     }
 }
 
