--- a/public/style.css
+++ b/public/style.css
@@ -9,11 +9,11 @@
 
 @media screen and (min-width:1000px) {
     h1 {
-        font-size: 30px !important;
+        font-size: 60px !important;
     }
     
-    h3 {
-        font-size: 25px !important;
+    h2, h3 {
+        font-size: 50px !important;
     }
 }
 
